2005-02-23  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.

	2005-02-22  Michael Koch  <konqueror@gmx.de>

        * gnu/java/security/PolicyFile.java,
        gnu/java/security/pkcs/PKCS7SignedData.java,
        gnu/java/security/pkcs/SignerInfo.java:
        Fixed copyright header.

2005-02-23  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.

	2005-02-22  Roman Kennke <roman@ontographics.com>

        * javax/swing/plaf/basic/BasicLookAndFeel.java
        (initComponentDefaults): Fixed Button left and right margin

2005-02-23  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.

	2005-02-22  Thomas Fitzsimmons  <fitzsim@redhat.com>

        * native/jni/gtk-peer/gnu_java_awt_peer_gtk_GtkEvents.c
        (button_to_awt_mods): Return BUTTON masks, not BUTTON_DOWN masks.

2005-02-23  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.

	2005-02-22  Thomas Fitzsimmons  <fitzsim@redhat.com>

        * native/jni/gtk-peer/gthread-jni.c (throw):
        Call g_snprintf instead of snprintf.

2005-02-23  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.

	2005-02-22  Thomas Fitzsimmons  <fitzsim@redhat.com>

        * gnu/java/awt/peer/gtk/GtkWindowPeer.java,
        jni/gtk-peer/gnu_java_awt_peer_gtk_GtkWindowPeer.c
        (getWidth): New method.
        (getHeight): Likewise.
        (create): Remove width, height and insets parameters.  Move size
        setup ...
        (realize_cb): ... here.  New function.
        (connectSignals): Connect realize_cb.
        (request_frame_extents): Remove FIXME.  Move
        postInsetsChangedEvent lookup ...
        * jni/gtk-peer/gnu_java_awt_peer_gtk_GtkToolkit.c (gtkInit):
        ... here.  Look up GtkWindowPeer getWidth and getHeight methods.
        * jni/gtk-peer/gtkpeer.h (postInsetsChangedEventID): Declare
        jmethodID.
        (windowGetWidthID): Likewise.
        (windowGetHeightID): Likewise.
