@@ -2,6 +2,16 @@
 
 	Resynced with GNU Classpath.
 
+	2005-02-22  Andrew John Hughes  <gnu_andrew@member.fsf.org>
+
+        * java/text/SimpleDateFormat.java:
+        Substitute StringBuilder for the original
+        StringBuffer.
+
+2005-02-23  Dalibor Topic  <robilad@kaffe.org>
+
+	Resynced with GNU Classpath.
+
 	2005-02-22  Michael Koch  <konqueror@gmx.de>
 
         * gnu/java/security/PolicyFile.java,
